--- a/deepfence_ui/app/styles/compliance-check/styles.scss
+++ b/deepfence_ui/app/styles/compliance-check/styles.scss
@@ -1,5 +1,5 @@
-@import 'deepfence';
-@import 'variables';
+@import '../deepfence';
+@import '../variables';
 
 .compliance-check-view {
   background-color: $flex-box-background;
