--- a/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
@@ -90,3 +90,42 @@
 .loader {
   left: 50%;
 }
+
+.multiSelectActions {
+  right: 0px;
+  top: 0px;
+  text-align: center;
+  margin-right: 60px;
+  font-size: 14px;
+  font-weight: bold;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  background-color: #202020;
+  height: 40px;
+
+  :global(.extra-options) {
+    margin-right: 10px;
+    border-radius: 6px;
+    :global(.primary-btn) {
+      min-width: 50px;
+      background-color: #007FFF;
+      color: #FFFFFF;
+      border-radius: 6px;
+      border: none;
+      padding: 3px 7px;
+    }
+  }
+}
+
+.actionIcon {
+  font-size: 20px;
+  background-color: #383838;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 6px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 4px;
+}
+
