render using g6 instead of ant charts

--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -4352,9 +4352,7 @@ input {
     .vlun-path-graph-title {
       font-weight: 500;
       color: $white;
-    }
-    .dagre-graph-container {
-      margin-top: 50px;
+      padding-bottom: 50px;
     }
   }
 
