update apis for tooltips

--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -4353,6 +4353,8 @@ input {
       font-weight: 500;
       color: $white;
       padding-bottom: 50px;
+      margin-left: 100px;
+      text-align: left;
     }
   }
 
