--- a/deepfence_ui/app/scripts/components/common/dagre-graph/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/dagre-graph/index.module.scss
@@ -1,9 +1,10 @@
 
 .dagreGraphContainer {
   :global(.dagre-node-tooltip) {
-    color: #EEEEEE;
+    color: rgb(166, 166, 166);
     padding: 6px 12px;
     border-radius: 4px;
-    background-color: #333333;
+    background-color: rgb(31, 31, 31);
+    font-size: 12px;
   }
 }
