update to new table component

--- a/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
@@ -19,6 +19,8 @@
 
     .headerContent {
       width: 100%;
+      display: flex;
+      align-items: flex-start;
     }
 
     .headerCellResizer {
@@ -53,9 +55,8 @@
       font-weight: normal;
       color: #c0c0c0;
       padding: 8px 12px;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      display: flex;
+      align-items: center;
 
       .expanderCell {
         width: 100%;
@@ -73,6 +74,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .wrap {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
@@ -132,3 +139,6 @@
   border-radius: 4px;
 }
 
+.clickableRow {
+  cursor: pointer;
+}
