--- a/deepfence_backend/config/templates/detailed_report_security_report_base.html
+++ b/deepfence_backend/config/templates/detailed_report_security_report_base.html
@@ -27,7 +27,7 @@
 
         .page-footer {
           position: fixed;
-          border-top: 1px solid grey;
+          border-top: 1px solid rgb(255, 255, 255);
           bottom: 0;
           width: 8.0in;
           padding-top: 5px;
