--- a/deepfence_ui/app/scripts/components/common/dagre-graph/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/dagre-graph/index.module.scss
@@ -1,5 +1,6 @@
-
 .dagreGraphContainer {
+  height: 100%;
+  width: 100%;
   :global(.dagre-node-tooltip) {
     color: rgb(166, 166, 166);
     padding: 6px 12px;
