fix issue with toplogy graph height cropping

--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/react-tippy/dist/tippy.css';
+@import '../../node_modules/tippy.js/dist/tippy.css';
 
 /* START :: APP SCROLL BAR STYLES */
 ::-webkit-scrollbar-track {
