Added secret scan page

--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -1396,6 +1396,7 @@
   min-width: 100px;
 }
 .medium-severity,
+.Medium-severity,
 .status-Failed,
 .status-failed,
 .status-expired {
@@ -1408,6 +1409,7 @@
   min-width: 100px;
 }
 .low-severity,
+.Low-severity,
 .status-Success,
 .status-success,
 .status-active {
