--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -1393,7 +1393,7 @@
   min-width: 100px;
 }
 .info-severity,
-.Unknown-severity {
+.never_scanned-severity {
   color: $grey-border;
   border: 1px solid $grey-border;
   display: inline-flex !important;
