--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -1399,7 +1399,7 @@
   min-width: 100px;
 }
 .info-severity,
-.never_scanned-severity {
+.not_vulnerable-severity {
   color: $grey-border;
   border: 1px solid $grey-border;
   display: inline-flex !important;
