fix agent instructions scroll issue

--- a/deepfence_ui/app/scripts/components/common/agent-setup/agent-setup.module.scss
+++ b/deepfence_ui/app/scripts/components/common/agent-setup/agent-setup.module.scss
@@ -6,6 +6,8 @@
   padding: 16px;
   padding-top: 64px;
   font-size: 1.125rem;
+  height: 100%;
+  overflow-y: auto;
 
   .setupHeader {
     font-size: 1.5rem;
