--- a/deepfence_ui/app/scripts/components/common/detail-modal/body.module.scss
+++ b/deepfence_ui/app/scripts/components/common/detail-modal/body.module.scss
@@ -84,4 +84,9 @@
 .topRightVisualizationWrapper {
   grid-column: span 1 / -1;
   grid-row: 1 / span 3;
+
+  .graphWrapper {
+    background-color: black;
+    border-radius: 8px;
+  }
 }
