add issues listing modal and issue details modal

--- a/deepfence_ui/app/styles/compliance-check/styles.scss
+++ b/deepfence_ui/app/styles/compliance-check/styles.scss
@@ -127,7 +127,7 @@
   }
 }
 
-.compliance-cis-ok, .compliance-gdpr-pass, .compliance-pci-pass, .compliance-nist-pass,  .compliance-gdpr-ok, .compliance-pci-ok, .compliance-nist-ok, .compliance-hipaa-pass, .compliance-soc2-ok, .compliance-hipaa-ok {
+.compliance-cis-ok, .compliance-cis-pass, .compliance-gdpr-pass, .compliance-pci-pass, .compliance-nist-pass,  .compliance-gdpr-ok, .compliance-pci-ok, .compliance-nist-ok, .compliance-hipaa-pass, .compliance-soc2-ok, .compliance-hipaa-ok {
   color: $color-success;
   background-color: transparent;
 
@@ -149,7 +149,7 @@
   }
 }
 
-.compliance-cis-warn, .compliance-hipaa-warn, .compliance-gdpr-warn, .compliance-pci-warn, .compliance-nist-warn, .compliance-cis-alarm, .compliance-hipaa-alarm, .compliance-gdpr-alarm, .compliance-pci-alarm, .compliance-nist-alarm, .compliance-soc2-alarm {
+.compliance-cis-warn, .compliance-cis-note, .compliance-hipaa-warn, .compliance-gdpr-warn, .compliance-pci-warn, .compliance-nist-warn, .compliance-cis-alarm, .compliance-hipaa-alarm, .compliance-gdpr-alarm, .compliance-pci-alarm, .compliance-nist-alarm, .compliance-soc2-alarm {
   color: $critical-alert-color;
   background-color: transparent;
 
