--- a/deepfence_ui/app/scripts/components/attack-garph/sidepanel/sidepanel.module.scss
+++ b/deepfence_ui/app/scripts/components/attack-garph/sidepanel/sidepanel.module.scss
@@ -2,7 +2,8 @@
 @import './../../../../styles/variables';
 
 .reachOverlay {
-  left: calc(100vw - min(500px, 80%));
+  left: calc(100vw - 500px);
+  width: 500px;
   bottom: auto;
   height: auto;
   background: transparent;
