add error handling on compliance start scan

--- a/deepfence_ui/app/scripts/components/compliance-view/start-scan-modal/styles.module.scss
+++ b/deepfence_ui/app/scripts/components/compliance-view/start-scan-modal/styles.module.scss
@@ -2,6 +2,16 @@
 @import './../../../../styles/variables';
 
 .modalContentWrapper {
+  .errorMessage {
+    width: 100%;
+    color: $color-error;
+    font-size: 14px;
+    font-weight: bold;
+    border: 1px solid $color-error;
+    padding: 4px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+  }
   .tabFormWrapper {
     display: flex;
     gap: 8px;
