--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -5278,9 +5278,16 @@ input {
   height: 64px;
   position: absolute;
   top: -30px;
-  padding: 10px;
   border-radius: 50%;
   background-color: white;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    padding:8px;
+  }
 }
 .logo-box.gitlab {
   width: 64px;
@@ -5310,15 +5317,20 @@ input {
   background-color: white;
 }
 .logo-box img {
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 .logo-box.azure {
   width: 64px;
   height: 64px;
   position: absolute;
   top: -30px;
-  padding: 10px;
+  background-color: #2166da;
   border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .logo-box.gcr {
   width: 64px;
