Reports, add host compliance scan report

--- a/deepfence_worker/tasks/reports/templates/applied_filters.gohtml
+++ b/deepfence_worker/tasks/reports/templates/applied_filters.gohtml
@@ -5,7 +5,7 @@
         <tr>
             <th>Scan Type</th>
             <th>Node Type</th>
-            <th>Severity</th>
+            <th>Severity/CheckType</th>
         </tr>
         <tr>
             <th> {{ .AppliedFilters.ScanType }}</th>
