--- a/deepfence_worker/tasks/reports/templates/compliance_nodes_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/compliance_nodes_table.gohtml
@@ -7,21 +7,21 @@
 <div class="summary-report-table" style="width: 100%;">
     <table style="table-layout: fixed; word-break: break-all;">
         <tr>
-            <th style="width: 40px ; background: #0576c9; color: white;">No.</th>
-            <th style="width: 120px; background: #0576c9; color: white;">Status</th>
-            <th style="width: 210px ; background: #0576c9; color: white;">Category</th>
-            <th style="width: 60px ; background: #0576c9; color: white;">Test Number</th>
+            <th style="width: 40px; background: #0576c9; color: white;">No.</th>
+            <th style="width: 60px; background: #0576c9; color: white;">Status</th>
+            <th style="width: 210px; background: #0576c9; color: white;">Category</th>
+            <th style="width: 100px; background: #0576c9; color: white;">Test Number</th>
             <th style="background: #0576c9; color: white;">Description</th>
-            <th style="background: #0576c9; color: white;">Check Type</th>
+            <th style="width: 100px ;background: #0576c9; color: white;">Check Type</th>
         </tr>
         {{ range $i, $v := $value }}
         <tr>
             <td style="width: 40px">{{ add1 $i }}</td>
-            <td style="width: 120px">{{ $v.Status }}</td>
+            <td style="width: 100px">{{ $v.Status }}</td>
             <td style="width: 210px">{{ $v.TestCategory }}</td>
             <td style="width: 60px">{{ $v.TestNumber }}</td>
             <td>{{ trunc 80 $v.TestInfo }}</td>
-            <td>{{ $v.ComplianceCheckType }}</td>
+            <td style="width: 100px">{{ $v.ComplianceCheckType }}</td>
         </tr>
         {{ end }}
     </table>
