--- a/deepfence_worker/tasks/reports/templates/base.gohtml
+++ b/deepfence_worker/tasks/reports/templates/base.gohtml
@@ -262,16 +262,20 @@
 <body>
   {{ template "header" . }}
   {{ template "applied-filters" . }}
-  {{ if not .NodeWiseData.ComplianceData  }}
+  {{ if not (or .NodeWiseData.ComplianceData .NodeWiseData.CloudComplianceData )}}
     {{ template "summary-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.ComplianceData  }}
+  {{ if .NodeWiseData.ComplianceData }}
     {{ template "compliance-summary-table" . }}
+  {{ end }}
+  {{ if .NodeWiseData.CloudComplianceData }}
+    {{ template "cloud-compliance-summary-table" . }}
   {{ end }}
   {{ template "vulnerabilities-nodes-table" . }}
   {{ template "secrets-nodes-table" . }}
   {{ template "malwares-nodes-table" . }}
   {{ template "compliance-nodes-table" . }}
+  {{ template "cloud-compliance-summary-table" . }}
   <!-- {% block content %}
     <div class="content">
     </div>
