--- a/deepfence_worker/tasks/reports/templates/cloud_compliance_nodes_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/cloud_compliance_nodes_table.gohtml
@@ -1,5 +1,5 @@
-{{ define "compliance-nodes-table" }}
-{{ range $key, $value := .NodeWiseData.ComplianceData }}
+{{ define "cloud-compliance-nodes-table" }}
+{{ range $key, $value := .NodeWiseData.CloudComplianceData }}
 <div id="{{ $key }}">
     <h3> {{ $key }} - Details</h3>
     <br>
@@ -9,8 +9,7 @@
         <tr>
             <th style="width: 40px; background: #0576c9; color: white;">No.</th>
             <th style="width: 60px; background: #0576c9; color: white;">Status</th>
-            <th style="width: 210px; background: #0576c9; color: white;">Category</th>
-            <th style="width: 100px; background: #0576c9; color: white;">Test Number</th>
+            <th style="width: 210px; background: #0576c9; color: white;">Title</th>
             <th style="background: #0576c9; color: white;">Description</th>
             <th style="width: 100px ;background: #0576c9; color: white;">Check Type</th>
         </tr>
@@ -18,9 +17,8 @@
         <tr>
             <td style="width: 40px">{{ add1 $i }}</td>
             <td style="width: 100px">{{ $v.Status }}</td>
-            <td style="width: 210px">{{ $v.TestCategory }}</td>
-            <td style="width: 60px">{{ $v.TestNumber }}</td>
-            <td>{{ trunc 80 $v.TestInfo }}</td>
+            <td style="width: 210px">{{ $v.Title }}</td>
+            <td>{{ trunc 80 $v.Description }}</td>
             <td style="width: 100px">{{ $v.ComplianceCheckType }}</td>
         </tr>
         {{ end }}
