--- a/deepfence_worker/tasks/reports/templates/base.gohtml
+++ b/deepfence_worker/tasks/reports/templates/base.gohtml
@@ -261,28 +261,29 @@
 <body>
   {{ template "header" . }}
   {{ template "applied-filters" . }}
-  {{ if not (or .NodeWiseData.ComplianceData .NodeWiseData.CloudComplianceData )}}
+  {{ $scan_types := list "vulnerability" "secret" "malware" }}
+  {{ if mustHas .ScanType $scan_types }}
     {{ template "summary-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.ComplianceData }}
+  {{ if eq .ScanType "compliance" }}
     {{ template "compliance-summary-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.CloudComplianceData }}
+  {{ if eq .ScanType "cloud_compliance" }}
     {{ template "cloud-compliance-summary-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.VulnerabilityData }}
+  {{ if eq .ScanType "vulnerability" }}
     {{ template "vulnerabilities-nodes-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.SecretData }}
+  {{ if eq .ScanType "secret" }}
     {{ template "secrets-nodes-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.MalwareData }}
+  {{ if eq .ScanType "malware" }}
     {{ template "malwares-nodes-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.ComplianceData }}
+  {{ if eq .ScanType "compliance" }}
     {{ template "compliance-nodes-table" . }}
   {{ end }}
-  {{ if .NodeWiseData.CloudComplianceData }}
+  {{ if eq .ScanType "cloud_compliance" }}
     {{ template "cloud-compliance-nodes-table" . }}
   {{ end }}
   <!-- {% block content %}
