--- a/deepfence_worker/tasks/reports/templates/cloud_compliance_nodes_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/cloud_compliance_nodes_table.gohtml
@@ -1,5 +1,5 @@
 {{ define "cloud-compliance-nodes-table" }}
-{{ range $key, $value := .NodeWiseData.CloudComplianceData }}
+{{ range $key, $value := .NodeWiseData.ScanData  }}
 <div id="{{ $key }}">
     <h3> {{ $key }} - Details</h3>
     <br>
@@ -13,7 +13,7 @@
             <th style="background: #0576c9; color: white;">Description</th>
             <th style="width: 100px ;background: #0576c9; color: white;">Check Type</th>
         </tr>
-        {{ range $i, $v := $value }}
+        {{ range $i, $v := $value.ScanResults }}
         <tr>
             <td style="width: 40px">{{ add1 $i }}</td>
             <td style="width: 100px">{{ $v.Status }}</td>
