--- a/deepfence_worker/tasks/reports/templates/secrets_nodes_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/secrets_nodes_table.gohtml
@@ -1,5 +1,5 @@
 {{ define "secrets-nodes-table" }}
-{{ range $key, $value := .NodeWiseData.SecretData }}
+{{ range $key, $value := .NodeWiseData.ScanData }}
 <div id="{{ $key }}">
     <h3> {{ $key }} - Details</h3>
     <br>
@@ -14,7 +14,7 @@
             <th style="background: #0576c9; color: white;">Matched Content</th>
             <th style="width: 100px; background: #0576c9; color: white;">Part</th>
         </tr>
-        {{ range $i, $v := $value }}
+        {{ range $i, $v := $value.ScanResults }}
         <tr>
             <td style="width: 40px">{{ add1 $i }}</td>
             <td style="width: 150px">{{ $v.Name }}</td>
